<resources>
    <string name="app_name">My Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="temp_humi">---- | ----</string>
    <string name="username">username</string>
    <string name="email">example@mail.com</string>
    <string name="sign_out">Sign out</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="title_sign_out">Do you want to sign out?</string>
    <string name="about">About</string>
    <string name="options">Options</string>
    <string name="made_by_dang_duc">Dang Duc</string>
    <string name="back">Back</string>
    <string name="duc_email">ducdang513@gmail.com</string>
    <string name="map">Map</string>
    <string name="history">History</string>
    <string name="permission">Permission</string>
    <string name="granted_permission">Granted permission</string>
    <string name="deny_permission">Permission not granted</string>
    <string name="deny_message">"If you reject permission,you can not use this service\n\nPlease turn on permissions at [Setting] > [Permission]"</string>
    <string name="preferences">Preferences</string>
    <string name="manage_user">Manage User</string>
    <string name="type_user">Type user</string>
    <string name="total_user">Total user</string>
    <string name="zero">0</string>
    <string name="title_set_type_user">Set type user</string>
    <string name="set_user_ok">Change type user successfully</string>
    <string name="set_user_fail">Change type user fail</string>
    <string name="title_dialog_clear_data">"Do you want to delete data?"</string>
    <string name="storage">Storage</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="pdf">Pdf</string>

    <style name="Title_30" parent="Widget.AppCompat.TextView">
        <item name="android:textSize">30sp</item>
        <item name="android:layout_gravity">center</item>
        <item name="android:gravity">center</item>
    </style>

    <style name="Title_25" parent="Widget.AppCompat.TextView">
        <item name="android:textSize">25sp</item>
        <item name="android:layout_gravity">center</item>
        <item name="android:gravity">center</item>
    </style>

    <style name="TextBlack_25" parent="Widget.AppCompat.TextView">
        <item name="android:textSize">25sp</item>
        <item name="android:textColor">@color/black</item>
    </style>

    <style name="TextBlack_30" parent="Widget.AppCompat.TextView">
        <item name="android:textSize">30sp</item>
        <item name="android:textColor">@color/black</item>
    </style>

    <style name="TextBlack_20" parent="Widget.AppCompat.TextView">
        <item name="android:textSize">20sp</item>
        <item name="android:textColor">@color/black</item>
    </style>

    <style name="TextBlack_15" parent="Widget.AppCompat.TextView">
        <item name="android:textSize">15sp</item>
        <item name="android:textColor">@color/black</item>
    </style>

    <style name="MyDialog" parent="Theme.AppCompat.Dialog.Alert">
        <item name="android:windowBackground">@android:color/transparent</item>
    </style>

    <style name="Btn_In_Account" parent="Widget.AppCompat.TextView">
        <item name="android:textSize">25sp</item>
        <item name="android:layout_gravity">center</item>
        <item name="android:gravity">center</item>
        <item name="android:padding">8dp</item>
        <item name="android:layout_marginEnd">10dp</item>
        <item name="android:layout_marginStart">10dp</item>
        <item name="android:background">@drawable/background_stroke_2_corner_16</item>
        <item name="android:textColor">@color/black</item>
        <item name="android:layout_marginBottom">8dp</item>
        <item name="android:backgroundTint">@color/textview_selector_in_account</item>
    </style>
</resources>