<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_dialog"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        style="@style/TextBlack_30"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/background_dialog"
        android:gravity="center"
        android:text="@string/options"
        android:textColor="@color/red_primary" />

    <TextView
        android:id="@+id/option_storage"
        style="@style/TextBlack_25"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/background_dialog"
        android:backgroundTint="@color/textview_selector"
        android:gravity="center"
        android:text="@string/storage"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/option_preferences"
        style="@style/TextBlack_25"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/background_dialog"
        android:backgroundTint="@color/textview_selector"
        android:gravity="center"
        android:text="@string/preferences"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/option_about"
        style="@style/TextBlack_25"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@drawable/background_dialog"
        android:backgroundTint="@color/textview_selector"
        android:gravity="center"
        android:text="@string/about"
        android:textColor="@color/black" />

</LinearLayout>